# ==============================================================================
# w3tk - WWW ToolKit CMake File
# ==============================================================================

# include subdirectories -------------------------------------------------------
ADD_SUBDIRECTORY(w3tk)

